--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>W - accelerate; A & D - turn; SPACE - Hyperjump</h1>
+			<h1>W - accelerate; A & D - turn; SPACE - Hyperjump; SHIFT - shoot</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Bullet.pde"> </canvas>
